--- a/Proposta_pull_request.html
+++ b/Proposta_pull_request.html
@@ -6,5 +6,8 @@
 		<h1>
 			Copyleft Andre e Rosalita, atualizado
 		</h1>
+		<h2>
+			Rosalita escolheu adicionar essa tag
+		</h2>
 	</body>
 </html>
